Network/Ingress/templates/Auth.yaml
---
# See: https://www.authelia.com/integration/kubernetes/istio/
#      https://www.envoyproxy.io/docs/envoy/v1.26.2/configuration/http/http_filters/ext_authz_filter#config-http-filters-ext-authz
#      https://www.envoyproxy.io/docs/envoy/latest/api-v3/extensions/filters/http/ext_authz/v3/ext_authz.proto.html#extensions-filters-http-ext-authz-v3-extauthz
#      https://istio.io/latest/docs/reference/config/istio.mesh.v1alpha1/#MeshConfig-ExtensionProvider-EnvoyExternalAuthorizationHttpProvider
apiVersion: cilium.io/v2
kind: CiliumClusterwideEnvoyConfig
metadata:
  name: envoy-ext-authz-http
spec:
  resources:
    - '@type': type.googleapis.com/envoy.config.listener.v3.Listener
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                '@type': >-
                  type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                http_filters:
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      '@type': >-
                        type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      grpc_service:
                        google_grpc:
                          statPrefix: listener-insecure
                          target_uri: >-
                            authorino-authorino-authorization.kuadrant-system.svc.k0s.resolvemy.host:50051
                      transport_api_version: V3
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': >-
                        type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                rds:
                  route_config_name: lb_route
                stat_prefix: envoy-lb-listener
      name: listener

    - '@type': type.googleapis.com/envoy.config.route.v3.RouteConfiguration
      name: lb_route
      virtual_hosts:
        - domains:
            - '*'
          name: lb_route
          routes:
            - match:
                prefix: /
              route:
                cluster: core-prod/cilium-gateway-ingress-gw

    - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      name: core-prod/cilium-gateway-ingress-gw
      connect_timeout: 5s
      lb_policy: ROUND_ROBIN
      type: EDS

  services:
    - name: cilium-gateway-auth-gw
      namespace: core-prod

  backendServices:
    - name: cilium-gateway-ingress-gw   
      namespace: core-prod
